test/e2e/tests/system-readiness/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: system-readiness
spec:
  description: Verify BGP system components are healthy before running functional tests
  steps:
    - name: crds-established
      try:
        - assert:
            resource:
              apiVersion: apiextensions.k8s.io/v1
              kind: CustomResourceDefinition
              metadata:
                name: bgprouters.network.datumapis.com
              status:
                (conditions[?type=='Established'].status | [0]): "True"
        - assert:
            resource:
              apiVersion: apiextensions.k8s.io/v1
              kind: CustomResourceDefinition
              metadata:
                name: bgpadvertisements.network.datumapis.com
              status:
                (conditions[?type=='Established'].status | [0]): "True"
        - assert:
            resource:
              apiVersion: apiextensions.k8s.io/v1
              kind: CustomResourceDefinition
              metadata:
                name: bgppolicies.network.datumapis.com
              status:
                (conditions[?type=='Established'].status | [0]): "True"
        - assert:
            resource:
              apiVersion: apiextensions.k8s.io/v1
              kind: CustomResourceDefinition
              metadata:
                name: bgppeers.network.datumapis.com
              status:
                (conditions[?type=='Established'].status | [0]): "True"
        - assert:
            resource:
              apiVersion: apiextensions.k8s.io/v1
              kind: CustomResourceDefinition
              metadata:
                name: bgpvrfinstances.network.datumapis.com
              status:
                (conditions[?type=='Established'].status | [0]): "True"
